# passManager

./: .gitignore  API_SETUP.md  DEPLOYMENT.md  GITHUB_KURULUM.md  GITHUB_MERGE_COZUM.md  GITHUB_SORUN_COZUM.md  HIZLI_BASLANGIC.md  RAILWAY_KURULUM.md  README.md  gui_entry.py  ios_client_example.swift  pass_manager_gui.spec  pyproject.toml  requirements.txt  start_server.py
src/pass_manager/: __init__.py  cli.py  crypto.py  exceptions.py  models.py  passwords.py  storage.py
src/pass_manager/api/: __init__.py  auth.py  client.py  database.py  main.py  models.py  storage.py
src/pass_manager/gui/: __init__.py  __main__.py  app.py
src/pass_manager_tanjiro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_crypto.py  test_passwords.py
web_app/: README.md  api.js  app.js  crypto.js  index.html  manifest.json  style.css
