[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pass-manager-tanjiro"
version = "0.1.0"
description = "AES-GCM ile şifrelenmiş kişisel şifre yöneticisi"
readme = "README.md"
authors = [{ name = "Tanjiro" }]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.5",
    "rich>=13.7.0",
    "PySide6>=6.7.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[project.scripts]
pass-manager = "pass_manager.cli:main"
pass-manager-gui = "pass_manager.gui.app:launch"
pass-manager-server = "pass_manager.api.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

